--- a/bots/prototypes/oberon_trading_bot.ipynb
+++ b/bots/prototypes/oberon_trading_bot.ipynb
@@ -1,34 +1,24 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "machine_shape": "hm"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "%%capture\n",
-        "!pip install gradio beautifulsoup4 yfinance torch"
-      ],
+      "execution_count": 23,
       "metadata": {
         "id": "2aAxxALzQmBk"
       },
-      "execution_count": 23,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "%%capture\n",
+        "!pip install gradio beautifulsoup4 yfinance torch"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {
+        "id": "4xEOCh0iRcKL"
+      },
+      "outputs": [],
       "source": [
         "import gradio as gr\n",
         "import pandas as pd\n",
@@ -54,15 +44,15 @@
         "def debug_print(msg):\n",
         "    if DEBUG:\n",
         "        print(msg)"
-      ],
-      "metadata": {
-        "id": "4xEOCh0iRcKL"
-      },
-      "execution_count": 24,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {
+        "id": "MYwBlqfqJCtQ"
+      },
+      "outputs": [],
       "source": [
         "# FOMC Dates Scraper\n",
         "def get_fomc_dates(start_date, end_date):\n",
@@ -91,15 +81,15 @@
         "    except Exception as e:\n",
         "        debug_print(f\"Error scraping FOMC dates: {e}\")\n",
         "        return []"
-      ],
-      "metadata": {
-        "id": "MYwBlqfqJCtQ"
-      },
-      "execution_count": 25,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {
+        "id": "FOFxV4ZhJHAv"
+      },
+      "outputs": [],
       "source": [
         "# Indicator Functions\n",
         "def exp_average(series, period):\n",
@@ -220,15 +210,15 @@
         "        \"signal\": signal_line,\n",
         "        \"hist\": hist_line\n",
         "    }"
-      ],
-      "metadata": {
-        "id": "FOFxV4ZhJHAv"
-      },
-      "execution_count": 26,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {
+        "id": "ODoRmrcXJLQ7"
+      },
+      "outputs": [],
       "source": [
         "# Historical Signals Extraction\n",
         "def extract_signals(df, signalUp_ZLMA, signalDn_ZLMA, bullPt, bearPt,\n",
@@ -444,15 +434,15 @@
         "        signals_df[\"Date\"]= pd.to_datetime(signals_df[\"Date\"])\n",
         "        signals_df= signals_df.sort_values(\"Date\", ascending=False)\n",
         "    return signals_df"
-      ],
-      "metadata": {
-        "id": "ODoRmrcXJLQ7"
-      },
-      "execution_count": 27,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {
+        "id": "24xhwC1cJODl"
+      },
+      "outputs": [],
       "source": [
         "# RSI and MCDX signals\n",
         "def calc_rsi_entire_series(df, bullPt, bearPt):\n",
@@ -476,15 +466,15 @@
         "            last_signal = \"Sell\"\n",
         "        mcdx_series.append(last_signal)\n",
         "    return pd.Series(mcdx_series, index=df.index)"
-      ],
-      "metadata": {
-        "id": "24xhwC1cJODl"
-      },
-      "execution_count": 28,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {
+        "id": "6ewobcL4JRD5"
+      },
+      "outputs": [],
       "source": [
         "# Weighted scoreboard\n",
         "def scoreboard_for_day(\n",
@@ -605,15 +595,15 @@
         "            return \"Buy\"\n",
         "        else:\n",
         "            return \"Sell\""
-      ],
-      "metadata": {
-        "id": "6ewobcL4JRD5"
-      },
-      "execution_count": 29,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 53,
+      "metadata": {
+        "id": "GAj0jeVcJT7U"
+      },
+      "outputs": [],
       "source": [
         "# Historical Trade Table\n",
         "def simulate_trades_overall_signal(\n",
@@ -721,15 +711,15 @@
         "    trade_df = trade_df.sort_values(\"ExitDate_dt\", ascending=False).reset_index(drop=True)\n",
         "    trade_df.drop(columns=[\"ExitDate_dt\"], inplace=True)\n",
         "    return trade_df"
-      ],
-      "metadata": {
-        "id": "GAj0jeVcJT7U"
-      },
-      "execution_count": 53,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 55,
+      "metadata": {
+        "id": "w7ceOEbTJYLK"
+      },
+      "outputs": [],
       "source": [
         "# Scoreboard with ZeroLag + Basic MACD\n",
         "def extract_current_status(\n",
@@ -877,15 +867,15 @@
         "        overall\n",
         "    ]\n",
         "    return pd.DataFrame({\"Indicator\": indicators, \"Current Signal\": signals_})"
-      ],
-      "metadata": {
-        "id": "w7ceOEbTJYLK"
-      },
-      "execution_count": 55,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {
+        "id": "VWYU__5gJc-S"
+      },
+      "outputs": [],
       "source": [
         "# Plot (ZLMA, Bressert, MCDX, MCDX Bars, ZeroLag MACD, IV, Momentum Z-Score, Basic MACD)\n",
         "def create_generic_plot(df, ticker, start_date, end_date,\n",
@@ -1094,15 +1084,15 @@
         "    fig.savefig(buf, format=\"png\", bbox_inches=\"tight\")\n",
         "    buf.seek(0)\n",
         "    return Image.open(buf)"
-      ],
-      "metadata": {
-        "id": "VWYU__5gJc-S"
-      },
-      "execution_count": 32,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {
+        "id": "PgH0om2BJgFa"
+      },
+      "outputs": [],
       "source": [
         "# Main Chart-Generating Function with trade log\n",
         "def generate_plot(\n",
@@ -1312,15 +1302,15 @@
         "    except Exception as e:\n",
         "        debug_print(f\"Error: {e}\")\n",
         "        raise gr.Error(f\"An error occurred: {e}\")"
-      ],
-      "metadata": {
-        "id": "PgH0om2BJgFa"
-      },
-      "execution_count": 33,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 34,
+      "metadata": {
+        "id": "YsPmzHCdJiZ_"
+      },
+      "outputs": [],
       "source": [
         "# Save Historical Data\n",
         "def save_historical_data(ticker=\"SPY\", start_date=\"2022-01-01\", end_date=\"2023-01-01\",\n",
@@ -1439,15 +1429,15 @@
         "    except Exception as e:\n",
         "        debug_print(f\"Error: {e}\")\n",
         "        raise gr.Error(f\"An error occurred: {e}\")"
-      ],
-      "metadata": {
-        "id": "YsPmzHCdJiZ_"
-      },
-      "execution_count": 34,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 35,
+      "metadata": {
+        "id": "wLlMwRwGJl8Y"
+      },
+      "outputs": [],
       "source": [
         "# DQN + environment\n",
         "class TradingEnv:\n",
@@ -1664,15 +1654,45 @@
         "        return rewards_df, trade_plot\n",
         "    except Exception as e:\n",
         "        raise gr.Error(f\"An error occurred in the DQN module: {e}\")"
-      ],
-      "metadata": {
-        "id": "wLlMwRwGJl8Y"
-      },
-      "execution_count": 35,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 627
+        },
+        "id": "_8xShuqrKCYd",
+        "outputId": "db92979e-d142-4489-d0b5-81aba86b62cf"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Running Gradio in a Colab notebook requires sharing enabled. Automatically setting `share=True` (you can turn this off by setting `share=False` in `launch()` explicitly).\n",
+            "\n",
+            "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
+            "* Running on public URL: https://cd5600dd1314acc187.gradio.live\n",
+            "\n",
+            "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div><iframe src=\"https://cd5600dd1314acc187.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "# Gradio UI\n",
         "default_end_date= datetime.now().strftime(\"%Y-%m-%d\")\n",
@@ -1686,7 +1706,7 @@
         "        gr.Textbox(label=\"End Date (YYYY-MM-DD)\",   value=default_end_date),\n",
         "\n",
         "        # Weighted scoreboard\n",
-        "        gr.Slider(minimum=0, maximum=2, step=0.1, value=1.0, label=\"ZLMA Weight\"),\n",
+        "        gr.Slider(minimum=0, maximum=2, step=0.1, value=0.0, label=\"ZLMA Weight\"),\n",
         "        gr.Slider(minimum=0, maximum=2, step=0.1, value=1.0, label=\"RSI Weight\"),\n",
         "        gr.Slider(minimum=0, maximum=2, step=0.1, value=1.0, label=\"MCDX Weight\"),\n",
         "        gr.Slider(minimum=0, maximum=2, step=0.1, value=1.0, label=\"DSS Weight\"),\n",
@@ -1755,45 +1775,13 @@
         "\n",
         "if __name__==\"__main__\":\n",
         "    demo.launch()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 627
-        },
-        "id": "_8xShuqrKCYd",
-        "outputId": "db92979e-d142-4489-d0b5-81aba86b62cf"
-      },
-      "execution_count": 56,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Running Gradio in a Colab notebook requires sharing enabled. Automatically setting `share=True` (you can turn this off by setting `share=False` in `launch()` explicitly).\n",
-            "\n",
-            "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
-            "* Running on public URL: https://cd5600dd1314acc187.gradio.live\n",
-            "\n",
-            "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "<div><iframe src=\"https://cd5600dd1314acc187.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-            ]
-          },
-          "metadata": {}
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "IQbyIzdeH0sj"
+      },
       "source": [
         "### Changelog Version: 1.2.2\n",
         "- Fixed trade table\n",
@@ -1804,10 +1792,22 @@
         "- Added user adjustable weights\n",
         "- Added basic MACD\n",
         "- Added trade signals"
-      ],
-      "metadata": {
-        "id": "IQbyIzdeH0sj"
-      }
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "machine_shape": "hm",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
