--- a/trading_bot_macd_melissa/trading_bot_macd_melissa.ipynb
+++ b/trading_bot_macd_melissa/trading_bot_macd_melissa.ipynb
@@ -71,30 +71,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Fetch historical stock data for MAG6\n",
-    "# symbols = [\"AAPL\", \"GOOGL\", \"AMZN\", \"META\", \"MSFT\", \"NVDA\"]\n",
-    "# start_date = dt.datetime.now() - dt.timedelta(days=365)\n",
-    "# end_date = dt.datetime.now()\n",
+    "# Fetch historical stock data for MAG6\n",
+    "symbols = [\"AAPL\", \"GOOGL\", \"AMZN\", \"META\", \"MSFT\", \"NVDA\"]\n",
+    "start_date = dt.datetime.now() - dt.timedelta(days=365)\n",
+    "end_date = dt.datetime.now()\n",
     "\n",
-    "# request_params = StockBarsRequest(\n",
-    "#     symbol_or_symbols=symbols,\n",
-    "#     timeframe=TimeFrame.Day,\n",
-    "#     start=start_date,\n",
-    "#     end=end_date\n",
-    "# )\n",
+    "request_params = StockBarsRequest(\n",
+    "    symbol_or_symbols=symbols,\n",
+    "    timeframe=TimeFrame.Day,\n",
+    "    start=start_date,\n",
+    "    end=end_date\n",
+    ")\n",
     "\n",
-    "# bars = client.get_stock_bars(request_params).df\n",
-    "# stock_dic = {}\n",
-    "# scaler = MinMaxScaler(feature_range=(0, 1))\n",
+    "bars = client.get_stock_bars(request_params).df\n",
+    "stock_dic = {}\n",
+    "scaler = MinMaxScaler(feature_range=(0, 1))\n",
     "\n",
-    "# for symbol in symbols:\n",
-    "#     df = bars[bars.index.get_level_values(0) == symbol].copy()\n",
-    "#     df.reset_index(inplace=True)\n",
-    "#     df['timestamp'] = pd.to_datetime(df['timestamp'])\n",
-    "#     df.set_index('timestamp', inplace=True)\n",
-    "#     df = compute_macd(df)\n",
-    "#     df[['close', 'macd', 'signal']] = scaler.fit_transform(df[['close', 'macd', 'signal']])\n",
-    "#     stock_dic[symbol] = df"
+    "for symbol in symbols:\n",
+    "    df = bars[bars.index.get_level_values(0) == symbol].copy()\n",
+    "    df.reset_index(inplace=True)\n",
+    "    df['timestamp'] = pd.to_datetime(df['timestamp'])\n",
+    "    df.set_index('timestamp', inplace=True)\n",
+    "    df = compute_macd(df)\n",
+    "    df[['close', 'macd', 'signal']] = scaler.fit_transform(df[['close', 'macd', 'signal']])\n",
+    "    stock_dic[symbol] = df"
    ]
   },
   {
@@ -114,7 +114,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/I523193/.local/pipx/venvs/jupyter/lib/python3.12/site-packages/keras/src/layers/rnn/rnn.py:200: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "C:\\Users\\sassy\\anaconda3\\envs\\tf_env\\lib\\site-packages\\keras\\src\\layers\\rnn\\rnn.py:200: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
       "  super().__init__(**kwargs)\n"
      ]
     },
@@ -122,31 +122,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m75/75\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 9ms/step - loss: 0.0830\n",
+      "\u001b[1m75/75\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 26ms/step - loss: 0.0811\n",
       "Epoch 2/10\n",
-      "\u001b[1m75/75\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 9ms/step - loss: 0.0150\n",
+      "\u001b[1m75/75\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 26ms/step - loss: 0.0150\n",
       "Epoch 3/10\n",
-      "\u001b[1m75/75\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 9ms/step - loss: 0.0143\n",
+      "\u001b[1m75/75\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 26ms/step - loss: 0.0121\n",
       "Epoch 4/10\n",
-      "\u001b[1m75/75\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 9ms/step - loss: 0.0103\n",
+      "\u001b[1m75/75\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 25ms/step - loss: 0.0106\n",
       "Epoch 5/10\n",
-      "\u001b[1m75/75\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 10ms/step - loss: 0.0117\n",
+      "\u001b[1m75/75\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 26ms/step - loss: 0.0098\n",
       "Epoch 6/10\n",
-      "\u001b[1m75/75\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 9ms/step - loss: 0.0087\n",
+      "\u001b[1m75/75\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 26ms/step - loss: 0.0087\n",
       "Epoch 7/10\n",
-      "\u001b[1m75/75\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 10ms/step - loss: 0.0070\n",
+      "\u001b[1m75/75\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 26ms/step - loss: 0.0084\n",
       "Epoch 8/10\n",
-      "\u001b[1m75/75\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 9ms/step - loss: 0.0073\n",
+      "\u001b[1m75/75\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 26ms/step - loss: 0.0078\n",
       "Epoch 9/10\n",
-      "\u001b[1m75/75\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 9ms/step - loss: 0.0069\n",
+      "\u001b[1m75/75\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 26ms/step - loss: 0.0071\n",
       "Epoch 10/10\n",
-      "\u001b[1m75/75\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 9ms/step - loss: 0.0069\n"
+      "\u001b[1m75/75\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 26ms/step - loss: 0.0065\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.history.History at 0x177b11e50>"
+       "<keras.src.callbacks.history.History at 0x22665d5ddf0>"
       ]
      },
      "execution_count": 6,
@@ -155,39 +155,38 @@
     }
    ],
    "source": [
-    "# # Prepare dataset for LSTM\n",
-    "# sequence_length = 50  # Use past 50 days for prediction\n",
+    "# Prepare dataset for LSTM\n",
+    "sequence_length = 50  # Use past 50 days for prediction\n",
     "\n",
-    "# def create_sequences(data):\n",
-    "#     X, y = [], []\n",
-    "#     for i in range(len(data) - sequence_length):\n",
-    "#         X.append(data[i:i + sequence_length])\n",
-    "#         y.append(data[i + sequence_length, 0])  # Predicting closing price\n",
-    "#     return np.array(X), np.array(y)\n",
+    "def create_sequences(data):\n",
+    "    X, y = [], []\n",
+    "    for i in range(len(data) - sequence_length):\n",
+    "        X.append(data[i:i + sequence_length])\n",
+    "        y.append(data[i + sequence_length, 0])  # Predicting closing price\n",
+    "    return np.array(X), np.array(y)\n",
     "\n",
-    "# X_train, y_train = [], []\n",
-    "# for symbol in symbols:\n",
-    "#     train_data = stock_dic[symbol][['close', 'macd', 'signal']].values\n",
-    "#     X, y = create_sequences(train_data)\n",
-    "#     X_train.append(X)\n",
-    "#     y_train.append(y)\n",
+    "X_train, y_train = [], []\n",
+    "for symbol in symbols:\n",
+    "    train_data = stock_dic[symbol][['close', 'macd', 'signal']].values\n",
+    "    X, y = create_sequences(train_data)\n",
+    "    X_train.append(X)\n",
+    "    y_train.append(y)\n",
     "\n",
-    "# X_train = np.concatenate(X_train, axis=0)\n",
-    "# y_train = np.concatenate(y_train, axis=0).reshape(-1, 1)  # Ensure y_train is 2D\n",
+    "X_train = np.concatenate(X_train, axis=0)\n",
+    "y_train = np.concatenate(y_train, axis=0).reshape(-1, 1)  # Ensure y_train is 2D\n",
     "\n",
-    "# # Build LSTM model\n",
-    "# model = Sequential([\n",
-    "#     LSTM(50, return_sequences=True, input_shape=(sequence_length, 3)),\n",
-    "#     Dropout(0.2),\n",
-    "#     LSTM(50, return_sequences=False),\n",
-    "#     Dropout(0.2),\n",
-    "#     Dense(25, activation='relu'),\n",
-    "#     Dense(1)\n",
-    "# ])\n",
+    "# Build LSTM model\n",
+    "model = Sequential([\n",
+    "    LSTM(50, return_sequences=True, input_shape=(sequence_length, 3)),\n",
+    "    Dropout(0.2),\n",
+    "    LSTM(50, return_sequences=False),\n",
+    "    Dropout(0.2),\n",
+    "    Dense(25, activation='relu'),\n",
+    "    Dense(1)\n",
+    "])\n",
     "\n",
-    "# model.compile(optimizer='adam', loss='mean_squared_error')\n",
-    "# model.fit(X_train, y_train, epochs=10, batch_size=16)\n",
-    "# returned the model"
+    "model.compile(optimizer='adam', loss='mean_squared_error')\n",
+    "model.fit(X_train, y_train, epochs=10, batch_size=16)"
    ]
   },
   {
@@ -200,17 +199,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 18ms/step\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 60ms/step \n",
       "BUY Order placed for AAPL\n",
-      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step \n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 23ms/step\n",
       "BUY Order placed for GOOGL\n",
-      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 21ms/step\n",
       "BUY Order placed for AMZN\n",
-      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 21ms/step\n",
       "BUY Order placed for META\n",
-      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 22ms/step\n",
       "BUY Order placed for MSFT\n",
-      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step \n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 21ms/step\n",
       "BUY Order placed for NVDA\n",
       "Trading bot executed based on LSTM predictions and MACD analysis.\n"
      ]
@@ -276,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
