cleaned log from test run

--- a/momentum_ml_carlo/momentum_ML_final.ipynb
+++ b/momentum_ml_carlo/momentum_ML_final.ipynb
@@ -126,7 +126,7 @@
     }
    ],
    "source": [
-    "BOT_NAME = \"momentum_ML\"\n",
+    "BOT_NAME = \"momentum_ml_carlo\"\n",
     "log_dir = Path.cwd() / BOT_NAME\n",
     "log_dir.mkdir(parents=True, exist_ok=True)\n",
     "logger = get_bot_logger(BOT_NAME, f\"{Path.cwd()}/{BOT_NAME}\")\n",
@@ -138,8 +138,8 @@
     "    \"\"\"\n",
     "    def __init__(self):\n",
     "        \"\"\"Initialize the momentum strategy bot with API credentials and settings.\"\"\"\n",
-    "        self.api_key = os.getenv('API_KEY_ML')\n",
-    "        self.api_secret = os.getenv('SECRET_KEY_ML')\n",
+    "        self.api_key = os.environ[f\"{BOT_NAME}_ALPACA_API_KEY\"]\n",
+    "        self.api_secret = os.environ[f\"{BOT_NAME}_ALPACA_API_SECRET\"]\n",
     "        if not self.api_key or not self.api_secret:\n",
     "            raise ValueError(\"API key and secret must be provided in environment variables\")\n",
     "        \n",
