--- a/momentum_ml_carlo/momentum_ML_final.ipynb
+++ b/momentum_ml_carlo/momentum_ML_final.ipynb
@@ -432,9 +432,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:my_quant_lab] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-my_quant_lab-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -446,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
